# openGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: linux.txt  macos.txt  windows.txt
CMakeModules/: linux.cmake  macos.cmake  printVariables.cmake
include/: Triangle.h  openGLHelper.h  print.h  windowHandeling.h
include/learnopenglcom/: Triangle.h
src/: 1.main.cc  2.vertexBuffers.cc  Triangle.cc  main.cc  openGLHelper.cc  windowHandeling.cc
src/Demo/learnopenglcom/: 1.HelloWindow.cc  2.TriangleWindow.cc  3.Rectangle.cc  4.shaders.cc  5.shaders.cc
src/chorno/: 1.main.cc  2.vertexBuffers.cc
src/learnopenglcom/: 1.HelloWindow.cc  2.TriangleWindow.cc  3.Rectangle.cc  4.shaders.cc  Triangle.cc
src/shaders/: 0.framgmentShader.glsl  0.vertexShader.glsl  1.fragmentShader.glsl  1.vertexShader.glsl  2.fragmentShader.glsl  2.vertexShader.glsl  triangleFramgmentShader.gls  triangleFramgmentShader.glsl  triangleVertexShader.gls  triangleVertexShader.glsl
